Closed Bug 660668 Opened 14 years ago Closed 14 years ago

Assertion failure: !start->hasTable(), at ../../jsscope.h:751 after OOM

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: paul.biggar, Unassigned)

References

Details

(Whiteboard: [fixed-in-tracemonkey])

Attachments

(1 file)

Attached patch fixSplinter Review
Shape::hashify can call setTable even on OOM (when getTable()->init() fails). However, Shape::search() assumes that hasTable() will be false on OOM. This makes search()'s assumption true.
Attachment #536117 - Flags: review?(nnethercote)
Comment on attachment 536117 [details] [diff] [review] fix Review of attachment 536117 [details] [diff] [review]: -----------------------------------------------------------------
Attachment #536117 - Flags: review?(nnethercote) → review+
Whiteboard: [fixed-in-tracemonkey]
cdleary-bot missed this.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: