Bug 660668: Fix Shape::search() assertion after OOM (r=nnethercote)

Shape::search() assumes hasTable() will be false if Shape::search() OOMs - make it so.