js/src/jsscope.cpp
@@ -190,8 +190,14 @@ Shape::hashify(JSRuntime *rt)
     PropertyTable *table = rt->new_<PropertyTable>(entryCount());
     if (!table)
         return false;
+
+    if (!table->init(rt, this)) {
+        rt->free_(table);
+        return false;
+    }
+
     setTable(table);
-    return getTable()->init(rt, this);
+    return true;
 }
 
 #ifdef DEBUG
